todo fix and dark mode

--- a/home.css
+++ b/home.css
@@ -154,3 +154,33 @@
     transform: scale(1.1);
 }
 
+
+
+/* dark mode*/
+body.dark-mode {
+    background-color: #121212;
+    color: #f4f4f4;
+}
+
+.dark-mode .todo-container,
+.dark-mode .menu-box,
+.dark-mode .footer,
+.dark-mode .social {
+    background-color: #1e1e1e;
+    color: #fff;
+}
+
+.dark-mode .add-btn,
+.dark-mode .status-btn,
+.dark-mode .delete-btn {
+    background-color: #444;
+    color: #fff;
+    border-color: #888;
+}
+
+.dark-mode .add-btn:hover,
+.dark-mode .status-btn:hover,
+.dark-mode .delete-btn:hover {
+    background-color: #fff;
+    color: #444;
+}
